テキストを中央寄りに変更

--- a/css/pages/home/style.css
+++ b/css/pages/home/style.css
@@ -103,6 +103,7 @@ p {
     background: #704125;
     color: #fff;
     padding: 70px 0;
+    text-align: center;
 }
 .reserve-banner button {
     padding: 8px 22px;
